--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Image Inpainting Tool</h1>
+    <h1>Picture Healer </h1>
     <input type="file" id="imageInput" accept="image/*">
     <canvas id="canvas"></canvas>
     <button id="inpaintButton">Inpaint</button>
